@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Pkgs 3"
-.TH SBO::Lib::Pkgs 3 "Boomtime, The Aftermath 60, 3190 YOLD" "" "sbotools 3.1"
+.TH SBO::Lib::Pkgs 3 "Pungenday, The Aftermath 61, 3190 YOLD" "" "sbotools 3.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
